--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -7,7 +7,7 @@
 
 #projects-anchor {
   position: relative;
-  top: -270px;
+  top: -150px;
   left: 0;
 }
 
@@ -26,5 +26,13 @@
 @media screen and (max-width: 1100px) {
   #projects {
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 974px) {
+  #projects-anchor {
+    position: relative;
+    top: -270px;
+    left: 0;
   }
 }
